--- a/index.html
+++ b/index.html
@@ -8,43 +8,9 @@
   <title>Document</title>
 </head>
 <body>
-  <header>
-<nav>
-  <ul>
-    <li>
-      <a href=""target="_blank">LESTYLE</a>
-    </li>
-    <li>
-      <a href=""target="_blank">PHOTODIARY</a>
-    </li>
-    <li>
-      <a href=""target="_blank">MUSIC</a>
-    </li>
-    <li>
-      <a href=""target="_blank">TRAVEL</a>
-    </li>
-  </ul>
-</nav>
-  </header>
-  <main>
-    <section>
-      <ul>
-        <li>
-          <img src="photo1">
-          <span>
-            LIFESTYLE
-          </span>
-          <h2>
-            More than just a music festival 
-          </h2>
-          <p>
-Life tastes better with coffee
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.
-          </p>
-        </li>
-      </ul>
-    </section>
-  </main>
+  <div class="first-div">
+<p class="first" id="first">hi</p>
+</div>
+<a href=" https://www.youtube.com " target="_blank">youtube</a>
 </body>
 </html>
